--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides ',kitty:Tc'
 
 ## set the zsh as default shell
-## set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /usr/bin/zsh
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## increase scroll-back history
 set -g history-limit 8000
