copy from tmux to system clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,8 +37,10 @@ set -g mouse on
 setw -g mode-keys vi
 
 ## copy to system clipboard
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+## bind-key -T copy-mode-vi v send-keys -X begin-selection
+## bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
 
 ## decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
