--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e1e2e9
-cursor_text_color #c4c6cf
+cursor #dee3e5
+cursor_text_color #bfc8ca
 
-foreground            #e1e2e9
-background            #111318
-selection_foreground  #273141
-selection_background  #bdc7dc
-url_color             #a7c8ff
+foreground            #dee3e5
+background            #0e1416
+selection_foreground  #1c3439
+selection_background  #b1cbd1
+url_color             #82d3e2
 
 # black
-color8   #e1e2e9
+color8   #dee3e5
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #a7c8ff
+color4  #82d3e2
 color12 #a39ec4
 
 # magenta
